Added detection of Alpine Linux