@@ -19,6 +19,7 @@ package eu.hansolo.fx.jdkmon.tools;
 import io.foojay.api.discoclient.DiscoClient;
 import io.foojay.api.discoclient.pkg.Architecture;
 import io.foojay.api.discoclient.pkg.FPU;
+import io.foojay.api.discoclient.pkg.LibCType;
 import io.foojay.api.discoclient.pkg.OperatingSystem;
 import io.foojay.api.discoclient.pkg.Pkg;
 import io.foojay.api.discoclient.pkg.SemVer;
@@ -66,13 +67,13 @@ public class Finder {
     private static final String[]                                      MAC_JAVA_HOME_CMDS        = { "/bin/bash", "-c", "echo $JAVA_HOME" };
     private static final String[]                                      LINUX_JAVA_HOME_CMDS      = { "/usr/bin/bash", "-c", "echo $JAVA_HOME" };
     private static final String[]                                      WIN_JAVA_HOME_CMDS        = { "cmd.exe", "/c", "echo %JAVA_HOME%" };
-    private static final String[]                                      DETECT_ALPINE_CMDS        = { "cat", "/etc/os-release", "| grep \"NAME=\"", "| grep -ic \"Alpine\"" };
+    private static final String[]                                      DETECT_ALPINE_CMDS        = { "/bin/bash", "-c", "cat /etc/os-release | grep 'NAME=' | grep -ic 'Alpine'" };
     private              ExecutorService                               service                   = Executors.newSingleThreadExecutor();
     private              Properties                                    releaseProperties         = new Properties();
     private              io.foojay.api.discoclient.pkg.OperatingSystem operatingSystem           = DiscoClient.getOperatingSystem();
     private              String                                        javaFile                  = OperatingSystem.WINDOWS == operatingSystem ? "java.exe" : "java";
     private              String                                        javaHome                  = "";
-    private              String                                        isAlpine                  = "";
+    private              boolean                                       isAlpine                  = false;
     private              DiscoClient                                   discoclient;
 
 
@@ -83,8 +84,7 @@ public class Finder {
         this.discoclient = discoclient;
         getJavaHome();
         if (this.javaHome.isEmpty()) { this.javaHome = System.getProperties().get("java.home").toString(); }
-        isAlpineLinux();
-        System.out.println("isAlpine: " + isAlpine);
+        checkIfAlpineLinux();
     }
 
 
@@ -121,9 +121,12 @@ public class Finder {
             if (null != availableUpdates) {
                 distrosToUpdate.put(distribution, availableUpdates);
             }
-            //TODO: get the right package e.g. on linux check if on Alpine Linux which means musl otherwise glibc
+            if (OperatingSystem.ALPINE_LINUX == operatingSystem) {
+                availableUpdates = availableUpdates.stream().filter(pkg -> pkg.getLibCType() == LibCType.MUSL).collect(Collectors.toList());
+            } else if (OperatingSystem.LINUX == operatingSystem) {
+                availableUpdates = availableUpdates.stream().filter(pkg -> pkg.getLibCType() != LibCType.MUSL).collect(Collectors.toList());
+            }
             distrosToUpdate.put(distribution, availableUpdates);
-            //distrosToUpdate.put(distribution, discoclient.updateAvailableFor(DiscoClient.getDistributionFromText(distribution.getApiString()), SemVer.fromText(distribution.getVersion()).getSemVer1(), Architecture.fromText(distribution.getArchitecture()), distribution.getFxBundled(), null));
         });
 
         // Check if there are newer versions from other distributions
@@ -362,14 +365,13 @@ public class Finder {
         }
     }
 
-    private void isAlpineLinux() {
+    private void checkIfAlpineLinux() {
         if (OperatingSystem.WINDOWS == operatingSystem || OperatingSystem.MACOS == operatingSystem) { return; }
-        // cat /etc/os-release | grep "NAME=" | grep -ic "Alpine"
         try {
-            ProcessBuilder processBuilder = new ProcessBuilder(DETECT_ALPINE_CMDS);
-            Process        process        = processBuilder.start();
-            Streamer       streamer       = new Streamer(process.getInputStream(), d -> this.isAlpine = d);
-            service.submit(streamer);
+            Process p      = Runtime.getRuntime().exec(DETECT_ALPINE_CMDS);
+            String  result = new BufferedReader(new InputStreamReader(p.getInputStream())).lines().collect(Collectors.joining("\n"));
+            this.isAlpine  = null == result ? false : result.equals("1");
+            if (this.isAlpine) { this.operatingSystem = OperatingSystem.ALPINE_LINUX; }
         } catch (IOException e) {
             e.printStackTrace();
         }
